Migrated from abs path to relative path in database
The Databse now stores the relative path to the music files. This allows to easily change the root musique folder if the user wishes to move it, or is changing device, without causing the whole library to be lost.